--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,7 +10,16 @@
 <div class="container">
 <%= render "common/navbar"%>
 <%= notice_message %>
+<div class="col-md-2">
+<ul class="nav nav-pills nav-stacked">
+  <li><%= link_to("商品後台",admin_products_path) %></li>
+  <li><%= link_to("使用者後台", admin_users_path) %></li>
+</ul>
+</div>
+<div class="col-md-10">
 <%= yield %>
+</div>
 </div>
 </body>
 </html>
+
