--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,4 +1,6 @@
 <h2>購物車列表</h2>
+<span class="pull-right"><%= link_to("清空購物車", clean_carts_path, method: :delete, class: "btn btn-danger") %>
+</span>
 <table class="table">
   <thead>
     <tr>
@@ -10,17 +12,21 @@
     </tr>
   </thead>
   <tbody>
-    <% @items.each do |item| %>
+    <% @items.each do |product| %>
     <tr>
-      <td><% if item.photo.image.present? %>
-      <%= image_tag(item.photo.image.thumb.url, class: "thumbnail") %>
+      <td><% if product.photo.image.present? %>
+      <%= image_tag(product.photo.image.thumb.url, class: "thumbnail") %>
       <% else %>
       <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
       <% end %></td>
-      <td><%= item.title %></td>
-      <td><%= item.price %></td>
-      <td></td>
-      <td></td>
+      <td><%= product.title %></td>
+      <td><%= product.price %></td>
+      <td><% item = current_cart.find_cart_item(product) %>
+          <%= form_for item, url: item_path(product) do |f|%>
+            <%= f.select :quantity, 1..product.quantity %>
+            <%= f.submit "更新", data: { disable_with: "Submiting..." } %>
+          <% end %></td>
+      <td><%= link_to item_path(product),method: :delete do %><i class="fa fa-trash"></i><% end %></td>
     </tr>
     <% end %>
   </tbody>
@@ -29,5 +35,5 @@
     <span class="pull-right">總計<%= render_total_price(current_cart) %> NTD</span>
   </div>
   <div class="clearfix">
-    <span class="pull-right"><%= link_to("確認購買", "#" , class: "btn btn-danger") %></span>
+    <span class="pull-right"><%= link_to("確認購買", checkout_carts_path, method: :post, class: "btn btn-danger") %></span>
     </div>
