--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -21,6 +21,7 @@
         </a>
         <ul class="dropdown-menu">
           <% if current_user.is_admin? %>
+          <li><%= link_to("我的訂單", account_orders_path) %></li>
           <li><%= link_to("後台", admin_products_path) %>
           <% end %>
           <li><%= link_to("登出", destroy_user_session_path, method: :delete) %></li>
