--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,6 +12,7 @@
 <%= notice_message %>
 <div class="col-md-2">
 <ul class="nav nav-pills nav-stacked">
+  <li><%= link_to("系統訂單", admin_orders_path) %></li>
   <li><%= link_to("商品後台",admin_products_path) %></li>
   <li><%= link_to("使用者後台", admin_users_path) %></li>
 </ul>
