--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,4 +1,44 @@
+<div class="row">
+<div class="col-md-12">
 <h2>後台訂單明細</h2>
-<%= order. %>
+<h2>訂單狀態: <%= render_is_paid?(@order) %></h2>
+<div class="clearfix">
 <span class="pull-right">
-<table>
+<%= render "state_option",order: @order %>
+</span>
+<table class="table">
+  <thead>
+    <tr>
+      <th>商品明細</th>
+      <th>單價</th>
+      <th>數量</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @order_items.each do |item| %>
+    <tr>
+      <td><%= item.product_name %></td>
+      <td><%= item.price %></td>
+      <td><%= item.quantity %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<table class="table">
+  <tbody>
+    <tr>
+      <td>訂購者</td>
+    </tr>
+    <tr>
+      <td><%= @order_info.billing_name %> - <%= @order_info.billing_address %></td>
+    </tr>
+    <tr>
+      <td>收件者</td>
+    </tr>
+    <tr>
+      <td><%= @order_info.shipping_name %> - <%= @order_info.shipping_address %></td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
