--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,8 @@
 <div class="row">
       <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
-          <li> <%= link_to("Products", admin_products_path) %> </li>
+          <li> <%= link_to("商品後台", admin_products_path) %> </li>
+          <li> <%= link_to("使用者後台", admin_users_path) %></li>
         </ul>
       </div>
 <div class="col-md-10">
