--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -26,7 +26,7 @@
       <%= cart_item.price %>
       </td>
       <td>
-      1
+      <%= current_cart.find_cart_item(cart_item).quantity %>
       </td>
     </tr>
   <% end %>
