--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,4 +1,7 @@
 <h2>購物車清單</h2>
+<div class="clearfix">
+<span class="pull-right"><%= link_to("清空購物車", clean_carts_path, method: :delete, class: "btn btn-danger") %></span>
+</div>
 <table class="table">
   <thead>
     <tr>
@@ -7,6 +10,7 @@
       <th>商品單價</th>
       <th>商品數量</th>
       <th>總價</th>
+      <th>刪除</th>
     </tr>
   </thead>
   <tbody>
@@ -24,15 +28,19 @@
       </td>
       <%= content_tag(:td, cart_item.price, 'data-price' => cart_item.price, class: "price") %>
       <td>
-        <select>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-        </select>
+        <% item = current_cart.cart_items.find_by(product_id: cart_item) %>
+        <%= simple_form_for item, url: item_path(cart_item) do |f| %>
+        <%=f.select :quantity, 1..cart_item.quantity  %>
+        <%= f.submit "送出", 'type'=>'hidden', id: "quantity"%>
+        <% end %>
       </td>
       <td class="total">
-      <%= cart_item.price %>
+      <%= render_each_item_total_price(cart_item) %>
+      </td>
+      <td>
+      <%= link_to item_path(cart_item),method: :delete, data: { confirm: "Are you sure?"} do %>
+        <span class="fa fa-trash"></span>
+      <% end %>
       </td>
     </tr>
   <% end %>
