--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -18,7 +18,7 @@
   </tbody>
 </table>
 <div class="clearfix">
-  <span class="pull-right">總計 <%= render_cart_total_price(current_cart) %></span>
+  <span class="total-price pull-right">總計 <%= render_cart_total_price(current_cart) %>NTD</span>
 </div>
 <table class="table">
   <tbody>
