--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,6 +15,7 @@
         <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
           <li> <%= link_to("商品後台", admin_products_path) %> </li>
           <li> <%= link_to("使用者後台", admin_users_path) %></li>
+          <li> <%= link_to("訂單後台", admin_orders_path) %></li>
         </ul>
       </div>
 <div class="col-md-10">
