--- a/app/views/account/orders/index.html.erb
+++ b/app/views/account/orders/index.html.erb
@@ -13,7 +13,7 @@
         <tr>
           <td><%= link_to(order.id, order_path(order.token)) %></td>
           <td><%= order.created_at %></td>
-          <td><%= order.aasm_state %></td>
+          <td><%= render_order_state(order) %></td>
 
         </tr>
       <% end %>
