--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,6 +5,7 @@
         <th>商品名稱</th>
         <th>商品單價</th>
         <th>商品數量</th>
+        <th>商品總價</th>
       </tr>
     </thead>
   <tbody>
@@ -13,12 +14,13 @@
       <td><%= order_item.product_name %></td>
       <td><%= order_item.price %></td>
       <td><%= order_item.quantity %></td>
+      <td><%= order_item.price * order_item.quantity %></td>
     </tr>
   <% end %>
   </tbody>
 </table>
 <div class="clearfix">
-  <span class="total-price pull-right">總計 <%= render_cart_total_price(current_cart) %>NTD</span>
+  <span class="total-price pull-right">總計 <%= @order.total %>NTD</span>
 </div>
 <table class="table">
   <tbody>
