--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -26,8 +26,7 @@
 
     <ul class="dropdown-menu">
     <% if current_user.is_admin? %>
-      <li><%= link_to("商品後台", admin_products_path) %></li>
-      <li><%= link_to("使用者後台", admin_users_path) %></li>
+      <li><%= link_to("管理後台", admin_products_path) %></li>
     <% end %>
       <li><%= link_to("我的訂單", account_orders_path) %>
       <li><%= link_to("登出", destroy_user_session_path, method: :delete) %></li>
