--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -16,7 +16,7 @@
 <li><%= link_to carts_path,method: :get do %>購物車(<%= render_cart_items_count(current_cart) %>)<i class="fa fa-shopping-cart"></i><% end %></li>
 <% if !current_user %>
   <li><%= link_to("登入", new_user_session_path) %></li>
-  <li><%= link_to("Facebook登入", user_omniauth_authorize_path(:facebook)) %></li>
+  <li><%= link_to("Facebook登入", "#") %></li>
 <% else %>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
