--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,3 +23,8 @@
     </div>
   <% end %>
 </div>
+<div class="clearfix">
+<span class="pull-right under-line">
+page  &lt; <%= render "page" %> &gt;
+</span>
+</div>
