新增fb留言功能

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
     <%= text_field_tag :search, params[:search], placeholder: "搜尋關鍵字", style: "border-color:black; border-top:0;border-left:0;border-right:0;"%>
     <%= submit_tag "Search", name: nil ,type: "hidden", class: "fa fa-search"%>
     <a href="#" class="submit">
-    <i class="fa fa-search"></i>
+    <i class="fa fa-search submit"></i>
     </a>
 <% end %>
 </span>
