--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,11 @@
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.5&appId=952119471551860";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="row">
   <div class="col-md-6">
     <%= image_tag(@product.photo.image.medium.url, class: "thumbnail") %>
@@ -11,12 +19,15 @@
    </div>
    <div>數量 : <%= @product.quantity %> </div>
    <div class="product-price"> $ <%= @product.price %> </div>
+   <div class="clearfix">
    <div class="pull-right">
     <% if @product.quantity >0 %>
     <%= link_to("加入購物車",add_to_cart_product_path(@product),method: :post, class: "btn btn primary btn-lg btn-danger" ) %>
     <% else %>
     已售完
     <% end %>
+    <div class="fb-comments" data-href="http://localhost:3000/" data-width="500px;" data-numposts="5"></div>
+   </div>
    </div>
    </div>
    </div>
