--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,7 @@
     <% else %>
     已售完
     <% end %>
-    <div class="fb-comments" data-href="http://localhost:3000/" data-width="500px;" data-numposts="5"></div>
+    <div class="fb-comments" data-href="https://blooming-ocean-22766.herokuapp.com/" data-width="500px;" data-numposts="5"></div>
    </div>
    </div>
    </div>
