每個商品各自留言

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,8 @@
     <% else %>
     已售完
     <% end %>
-    <div class="fb-comments" data-href="https://blooming-ocean-22766.herokuapp.com/" data-width="500px;" data-numposts="5"></div>
+    <!-- <div class="fb-comments" data-href="https://blooming-ocean-22766.herokuapp.com/products/" data-width="500px;" data-numposts="5"></div> -->
+    <%= content_tag(:div,'',class: "fb-comments", 'data-href' => 'https://blooming-ocean-22766.herokuapp.com/products/#{@product.id}', 'data-width='=> '500px;', 'data-numposts'=>'5') %>
    </div>
    </div>
    </div>
