--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -37,7 +37,12 @@
 </table>
 <div class="clearfix">
 <% if !@order.is_paid? %>
-  <span class="pull-right"><%= link_to("以ATM付款", "#", class: "btn btn-info") %><%= link_to("以信用卡付款", pay_with_credit_card_order_path(@order.token), class: "btn btn-info") %></span>
+  <div class="pull-right" style="padding: 10px;">
+    <%= render "pay_with_credit_card", order: @order %>
+  </div>
+  <div class="pull-right" style="padding: 10px;">
+    <%= link_to("以 ATM 付款", "#", class: "btn btn-lg btn-danger") %>
+  </div>
 <% else %>
   <span class="pullright">此帳單已完成付款</span>
   <% end %>
