測試是否已解決寄信

--- a/app/views/order_mailer/notify_order_placed.html.erb
+++ b/app/views/order_mailer/notify_order_placed.html.erb
@@ -1,4 +1,5 @@
-<link href="/assets/stylesheets/application.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="/assets/application.css" />
+
 <div class="row">
   <div class="col-md-12">
     <h2>
