--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,14 @@
  font-weight: bold;
  color: #ff007c;
  }
+
+ .product-title > h5 {
+ font-weight: bold;
+ font-size: 20px;
+
+ }
+.product-title {
+  text-align:center;
+  color:black;
+  border-top:2px solid black;
+}
