--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -6,7 +6,7 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a href="/" class="nav navbar-brand">artstore</a>
+<a href="/" class="nav navbar-brand">SenShop</a>
 </div>
 <div class="collapse navbar-collapse" id="mynav">
 <ul class="nav navbar-nav">
