--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,20 @@
-<h2>Sign up</h2>
+<h2>註冊會員</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <%= f.input :email, required: true, autofocus: true, label: "電子信箱" %>
+    <%= f.input :password, required: true, label: "密碼", hint: ("#{@minimum_password_length} characters minimum"  if @minimum_password_length) %>
+    <%= f.input :password_confirmation, required: true, label: "確認密碼" %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "送出" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+<div style="padding-top:20px;">
+<%= link_to("使用Facebook帳號登入", user_omniauth_authorize_path(:facebook),class: "btn btn-primary fa fa-facebook-official fa-2x") %>
+</div>
