--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,13 +13,18 @@
   <% @products.each do |product| %>
     <div class="col-xs-6 col-md-3">
       <%= link_to product_path(product),method: :get do %>
+      <div class="thumbnail">
         <% if product.photo.present? %>
-          <%= image_tag(product.photo.image.thumb.url, class: "thumbnail") %>
+          <%= image_tag(product.photo.image.thumb.url) %>
         <% else %>
           <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
         <% end %>
       <% end %>
-      <%= product.title %> $ <%= product.price %>
+          <div class="product-title">
+            <h5><%= product.title %></h5>
+            <p>$<%= product.price %></p>
+          </div>
+      </div>
     </div>
   <% end %>
 </div>
