--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,16 +20,20 @@
    <div>數量 : <%= @product.quantity %> </div>
    <div class="product-price"> $ <%= @product.price %> </div>
    <div class="clearfix">
-   <div class="pull-right">
-    <% if @product.quantity >0 %>
-    <%= link_to("加入購物車",add_to_cart_product_path(@product),method: :post, class: "btn btn primary btn-lg btn-danger" ) %>
-    <% else %>
-    已售完
-    <% end %>
+    <div class="pull-right">
+      <% if @product.quantity >0 %>
+      <%= link_to("加入購物車",add_to_cart_product_path(@product),method: :post, class: "btn btn primary btn-lg btn-danger" ) %>
+      <% else %>
+        已售完
+      <% end %>
+    </div>
+  </div>
+  </div>
+</div>
     <!-- <div class="fb-comments" data-href="https://blooming-ocean-22766.herokuapp.com/products/" data-width="500px;" data-numposts="5"></div> -->
-    <%  %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
     <%= render "fbcomments", product: @product %>
-   </div>
-   </div>
-   </div>
-   </div>
+  </div>
+</div>
+
