--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="nav navbar-default" role="navigation" style="margin-bottom:10px">
+<nav class="nav navbar-inverse" role="navigation" style="margin-bottom:10px">
 <div class="container-fluid">
 <div class="nav navbar-header">
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynav">
