--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -28,7 +28,7 @@
     </div>
   <% end %>
 </div>
-<div class="clearfix">
+<div class="clearfix page">
 <span class="pull-right under-line">
 page  &lt; <%= render "page" %> &gt;
 </span>
