--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,3 +35,39 @@
   color:black;
   border-top:2px solid black;
 }
+footer{
+  border-top: 1px solid gray;
+  padding-top: 10px;
+}
+.list-unstyled > li{
+  margin-right: 10px;
+  float:left;
+  display:inline;
+}
+.list-unstyled > li > a {
+  display:block;
+  width:30px;
+  height:30px;
+  border-radius:100%;
+  border:1px solid black;
+  font-size:20px;
+  color:black;
+  position: relative;
+  transition: background-color .6s;
+
+}
+.list-unstyled >li > a:hover{
+  background-color: black;
+}
+.list-unstyled >li > a .fa {
+position: absolute;
+left:20%;
+top: 17%;
+transition: color .6s;
+}
+.list-unstyled >li > a:hover .fa{
+  color:white;
+}
+.page{
+  margin-top:20px;
+}
