--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,26 @@
 <footer class="container" style="margin-top: 100px;">
-  <p class="text-center">Copyright ©2016 SENSHOP
-    <br>Design by <a href="https://www.facebook.com/si.en.33" target=_new>Scorti</a>
-  </p>
+<div class="row">
+  <div class="col-md-6 pull-left">
+    <p>Copyright ©2016 SENSHOP
+      <br>Design by <a href="https://www.facebook.com/si.en.33" target=_new>Scorti</a>
+    </p>
+  </div>
+  <div class="col-md-6">
+    <ul class="list-unstyled pull-right">
+      <li>
+        <a href="#">
+          <i class="fa fa-twitter"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-facebook-square"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-instagram"></i>
+        </a>
+      </li>
+  </div>
 </footer>
