--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,10 +12,13 @@
  *
  *= require_tree .
  *= require_self
+ *= require style.css
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "font-awesome";
+
+
  .product-price {
  padding-top: 20px;
  padding-top: 20px;
@@ -70,4 +73,8 @@ transition: color .6s;
 }
 .page{
   margin-top:20px;
+}
+body{
+  padding-top:0px;
+  padding_bottom: 0px;
 }
