--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,11 +1,11 @@
-<footer class="container" style="margin-top: 100px;">
+<footer>
 <div class="row">
-  <div class="col-md-6 pull-left">
+  <div class="col-md-4 pull-left">
     <p>Copyright ©2016 SENSHOP
       <br>Design by <a href="https://www.facebook.com/si.en.33" target=_new>Scorti</a>
     </p>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <ul class="list-unstyled pull-right">
       <li>
         <a href="#">
@@ -13,14 +13,16 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.facebook.com/si.en.33">
           <i class="fa fa-facebook-square"></i>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.instagram.com/item0932/">
           <i class="fa fa-instagram"></i>
         </a>
       </li>
+    </ul>
   </div>
 </footer>
+
