--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
+
 <%= render "common/navbar" %>
 <%= notice_message %>
+<div class="col-md-offset-2 col-md-8">
 <%= yield %>
+<%= render "common/footer" %>
 </div>
-    <%= render "common/footer" %>
 </body>
 </html>
