--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,93 @@
+    <!-- begin:content -->
+
+      <!-- begin:logo -->
+      <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-6">
+          <div class="logo">
+            <h1><a href="index.html">Clothe<span>shop</span> </a></h1>
+            <p>Clean and simple shopping cart</p>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-6">
+          <div class="account">
+            <ul>
+              <li id="your-account">
+                <div class="hidden-xs">
+                  <h4><%= "歡迎光臨" %></h4>
+                  <p>Welcome</a></p>
+                </div>
+                <div class="visible-xs">
+                  <a href="login.html" class="btn btn-primary"><i class="fa fa-user"></i></a>
+                </div>
+              </li>
+              <li>
+                <div class="hidden-xs">
+                  <h4>購物車有</h4>
+                  <p><strong><%= link_to("#{render_cart_items_count(current_cart)}件商品", carts_path) %></strong></p>
+                </div>
+                <div class="visible-xs">
+                  <a href="cart.html" class="btn btn-primary"><span class="cart-item">3</span> <i class="fa fa-shopping-cart"></i></a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- end:logo -->
+
+      <!-- begin:nav-menus -->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="nav-menus">
+            <ul class="nav nav-pills">
+              <li class="active"><a href="index.html">首頁</a></li>
+              <li><%= link_to("關於","#") %></li>
+              <li><%= link_to("聯絡","#") %></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- end:nav-menus -->
+      <div id="home-slider" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#home-slider" data-slide-to="0" class="active"></li>
+          <li data-target="#home-slider" data-slide-to="1" class=""></li>
+          <li data-target="#home-slider" data-slide-to="2" class=""></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="img/slider1.png" alt="clotheshop">
+            <div class="carousel-caption hidden-xs">
+              <h3>New Arrival</h3>
+              <p></p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/slider2.png" alt="clotheshop">
+            <div class="carousel-caption hidden-xs">
+              <h3>New Arrival</h3>
+              <p></p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/slider3.png" alt="clotheshop">
+            <div class="carousel-caption hidden-xs">
+              <h3>New Arrival</h3>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <a class="left carousel-control" href="#home-slider" data-slide="prev">
+          <i class="fa fa-angle-left"></i>
+        </a>
+        <a class="right carousel-control" href="#home-slider" data-slide="next">
+          <i class="fa fa-angle-right"></i>
+        </a>
+      </div>
 <div class="clearfix"style="height:50px;">
 <span class="pull-right">
 <%= form_tag products_path, method: :get, class: "search-bar" do %>
-    <%= text_field_tag :search, params[:search], placeholder: "搜尋關鍵字", style: "border-color:black; border-top:0;border-left:0;border-right:0;"%>
+    <%= text_field_tag :search, params[:search], placeholder: "搜尋關鍵字", style: "border-color:black; border-top:0;border-left:0;border-right:0; margin-top: 10px;"%>
     <%= submit_tag "Search", name: nil ,type: "hidden", class: "fa fa-search"%>
     <a href="#" class="submit">
     <i class="fa fa-search submit"></i>
