--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -27,7 +27,8 @@
 </td>
 <td><%= product.title %></td>
 <td><%= product.price %></td>
-<td><%= link_to("編輯", edit_admin_product_path(product), class: "btn btn-danger") %></td>
+<td><%= link_to("編輯", edit_admin_product_path(product), class: "btn btn-danger") %>
+    <%= link_to("刪除", admin_product_path(product),method: :delete, class: "btn btn-danger") %></td>
 </tr>
 <% end %>
 </tbody>
