--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require style.css
+ *= require responsive.css
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
