--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,9 @@
  @import "bootstrap";
  @import "font-awesome";
 
-
+.breadcrumb{
+  margin-bottom:0px;
+}
  .product-price {
  padding-top: 20px;
  padding-top: 20px;
