--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 <%= render "common/navbar" %>
 <%= notice_message %>
 <%= yield %>
+<div class="clearfix">
 <%= render "common/footer" %>
+</div>
 </div>
 </body>
 </html>
