--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -40,8 +40,8 @@
           <div class="nav-menus">
             <ul class="nav nav-pills">
               <li class="active"><a href="index.html">首頁</a></li>
-              <li><%= link_to("關於","#") %></li>
-              <li><%= link_to("聯絡","#") %></a></li>
+              <li><%= link_to("關於",about_products_path) %></li>
+              <li><%= link_to("聯絡",contact_products_path) %></a></li>
             </ul>
           </div>
         </div>
