--- a/app/views/products/contact.html.erb
+++ b/app/views/products/contact.html.erb
@@ -11,8 +11,8 @@
             <ul>
               <li id="your-account">
                 <div class="hidden-xs">
-                  <h4><a href="#">Your Account</a></h4>
-                  <p>Welcome, <a href="login.html">log in</a></p>
+                  <h4><%= "歡迎光臨" %></h4>
+                  <p>Welcome</a></p>
                 </div>
                 <div class="visible-xs">
                   <a href="login.html" class="btn btn-primary"><i class="fa fa-user"></i></a>
@@ -20,8 +20,8 @@
               </li>
               <li>
                 <div class="hidden-xs">
-                  <h4><a href="cart.html">Cart</a></h4>
-                  <p><strong>3 Product(s)</strong></p>
+                  <h4>購物車有</h4>
+                  <p><strong><%= link_to("#{render_cart_items_count(current_cart)}件商品", carts_path) %></strong></p>
                 </div>
                 <div class="visible-xs">
                   <a href="cart.html" class="btn btn-primary"><span class="cart-item">3</span> <i class="fa fa-shopping-cart"></i></a>
