--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,6 +16,7 @@
           <li> <%= link_to("商品後台", admin_products_path) %> </li>
           <li> <%= link_to("使用者後台", admin_users_path) %></li>
           <li> <%= link_to("訂單後台", admin_orders_path) %></li>
+          <li><%= link_to("分類項目", admin_categories_path) %></li>
         </ul>
       </div>
 <div class="col-md-10">
