--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -79,5 +79,44 @@ transition: color .6s;
 }
 body{
   padding-top:0px;
-  padding_bottom: 0px;
+  padding-bottom: 0px;
+}
+select{
+  height: 30px;
+  width:200px;
+
+}
+a{
+  text-decoration: none;
+  color: black;
+  display:block;
+
+}
+.size{
+  height: 30px;
+  width: 30px;
+  border:1px solid black;
+  text-align: center;
+  line-height: 30px;
+  display: inline-block;
+  margin-right: 10px;
+  text-decoration: blink;
+  color:black;
+}
+.size:hover{
+  display:inline-block;
+  background-color: black;
+  color:white;
+  text-decoration:blink;
+}
+
+.selected{
+  display:inline-block;
+  background-color: black;
+  color:white;
+  text-decoration:none;
+
+}
+.size:active{
+  text-decoration:blink;
 }
