--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -17,7 +17,7 @@
 <tr>
 <td><%= product.id %></td>
 <td>
-<%= link_to product_path(product) do %>
+<%= link_to admin_product_path(product) do %>
   <% if product.photo.present? %>
     <%= image_tag(product.photo.image.thumb.url, class: "thumbnail") %>
   <% else %>
@@ -26,6 +26,7 @@
     <% end %>
 </td>
 <td><%= product.title %></td>
+
 <td><%= product.price %></td>
 <td><%= link_to("", edit_admin_product_path(product), class: "fa fa-edit fa-2x") %>
     <%= link_to("", admin_product_path(product),method: :delete, class: "fa fa-trash fa-2x") %></td>
