--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -39,9 +39,9 @@
         <div class="col-md-12">
           <div class="nav-menus">
             <ul class="nav nav-pills">
-              <li class="active"><a href="index.html">首頁</a></li>
-              <li><%= link_to("關於",about_products_path) %></li>
-              <li><%= link_to("聯絡",contact_products_path) %></a></li>
+              <li class="active"><a href="index.html"><%= t('HOME') %></a></li>
+              <li><%= link_to(t('ABOUT'),about_products_path) %></li>
+              <li><%= link_to(t('CONTACT'),contact_products_path) %></a></li>
             </ul>
           </div>
         </div>
