讓尺寸和數量可以在產品細節頁就選擇並把購物車頁面，寄送資訊，訂單頁面都會顯示正確的尺寸和數量，接下來要新增同樣尺寸的商品時會直接累積數量而不是又再多一筆資料

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,37 +86,34 @@ select{
   width:200px;
 
 }
-a{
+.size >a{
   text-decoration: none;
   color: black;
   display:block;
 
 }
+
 .size{
   height: 30px;
   width: 30px;
-  border:1px solid black;
   text-align: center;
   line-height: 30px;
   display: inline-block;
   margin-right: 10px;
   text-decoration: blink;
   color:black;
-}
-.size:hover{
-  display:inline-block;
-  background-color: black;
-  color:white;
-  text-decoration:blink;
+  background-color:#DDDDDD;
+  float:left;
 }
 
-.selected{
-  display:inline-block;
-  background-color: black;
-  color:white;
-  text-decoration:none;
+.size >a:hover{
+  text-decoration: none;
+}
 
+
+.size >a:focus{
+  border:1px solid black;
+  text-decoration: none;
+  color:black;
 }
-.size:active{
-  text-decoration:blink;
-}
+
