--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>商品圖片</th>
       <th>商品名稱</th>
+      <th>商品尺寸</th>
       <th>商品單價</th>
       <th>商品數量</th>
       <th>總價</th>
@@ -14,31 +15,32 @@
     </tr>
   </thead>
   <tbody>
-  <% @items.each do |cart_item| %>
+  <% current_cart.cart_items.each do |cart_item| %> <!-- 把所有購物車中的東西拉出來 -->
+  <% item = cart_item.product %> <!-- 撈出所有購物車中所屬的產品 -->
     <tr>
       <td>
-      <% if cart_item.photo.image.present? %>
-      <%= image_tag(cart_item.photo.image.thumb.url, class: "thumbnail") %>
+      <% if item.photo.image.present? %>
+      <%= image_tag(item.photo.image.thumb.url, class: "thumbnail") %>
       <% else %>
       <%= image_tag("http://placehold.it/200x200&text=No pic", class: "thumbnail") %>
       <% end%>
       </td>
       <td>
-      <%= link_to(cart_item.title, product_path(cart_item)) %>
+      <%= link_to(item.title, product_path(item)) %>
       </td>
-      <%= content_tag(:td, cart_item.price, 'data-price' => cart_item.price, class: "price") %>
+      <td><%= cart_item.size %></td>
+      <%= content_tag(:td, item.price, 'data-price' => item.price, class: "price") %>
       <td>
-        <% item = current_cart.cart_items.find_by(product_id: cart_item) %>
-        <%= simple_form_for item, url: item_path(cart_item) do |f| %>
-        <%=f.select :quantity, 1..cart_item.quantity  %>
+        <%= simple_form_for cart_item, url: item_path(item) do |f| %>
+        <%=f.select :quantity, 1..item.quantity  %>
         <%= f.submit "送出", 'type'=>'hidden', id: "quantity"%>
         <% end %>
       </td>
       <td class="total">
-      <%= render_each_item_total_price(cart_item) %>
+      <%= render_each_item_total_price(item) %>
       </td>
       <td>
-      <%= link_to item_path(cart_item),method: :delete, data: { confirm: "Are you sure?"} do %>
+      <%= link_to item_path(item),method: :delete, data: { confirm: "Are you sure?"} do %>
         <span class="fa fa-trash"></span>
       <% end %>
       </td>
