--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -43,8 +43,9 @@
     <div class="pull-right">
 
       <%= f.submit "加入購物車", method: :post, class: "btn btn-primary" %>
-      <% end %>
 
+      <% end %>
+  <%= render @product %>
     </div>
   </div>
   </div>
