--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
     <!-- begin:content -->
       <!-- begin:logo -->
+      <div><%= @useragent %></div>
       <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-6">
           <div class="logo">
